# IConfucius

./: .gitignore  CLAUDE.md  README-OpenChat-WIP.md  README.md  dfx.json  package-lock.json  requirements.txt
agent/: .gitignore  CLAUDE.md  Makefile  README-contribute.md  README-how-it-works.md  README-security.md  pyproject.toml
agent/client/src/: App.jsx  hooks.js  main.jsx  utils.js
agent/rasa/: CLAUDE.md  Makefile  README.md  config.yml  domain.yml  endpoints.yml
agent/rasa/actions/: actions_balance.py  actions_funding.py  actions_greeting.py  actions_market.py  actions_memory.py  actions_setup.py  actions_trading.py  actions_transfers.py  actions_utility.py
agent/rasa/data/: flows.yml  patterns.yml
agent/rasa/prompts/: rephrase.jinja2
agent/scripts/: bundle_client.sh  update_tokens.py
agent/skills/iconfucius/: SKILL.md
agent/skills/iconfucius/scripts/: iconfucius-skill.py
agent/src/iconfucius/: __init__.py  accounts.py  ai.py  bip322.py  candid.py  config.py  conversation_log.py  health.py  http_utils.py  logging_config.py  memory.py  openai_compat.py  persona.py  rasa_llm_logger.py  siwb.py  tokens.py  tokens.toml  transfers.py  units.py  wizard.py
agent/src/iconfucius/cli/: __init__.py  balance.py  chat.py  chat_rasa.py  concurrent.py  fund.py  rest_api.py  trade.py  transfer.py  wallet.py  withdraw.py
agent/src/iconfucius/client/: .gitignore  README.md  __init__.py  index.html  package-lock.json  package.json  server.py  vite.config.js
agent/src/iconfucius/skills/: __init__.py  (+2 more)
agent/tests/: __init__.py  conftest.py  test_ai.py  test_balance.py  test_bip322_helper.py  test_chat.py  test_cli.py  test_concurrent.py  test_config.py  test_config_extended.py  test_conversation_log.py  test_fund.py  test_get_public_key.py  test_hallucinations.py  test_health.py  test_logging.py  test_memory.py  test_openai_compat.py  test_persona.py  test_security.py  test_sign_with_fee.py  test_siwb.py  test_skills_definitions.py  test_skills_executor.py  test_tokens.py  test_trade.py  test_transfer.py  test_transfers.py  test_ui.py  test_units.py  test_wallet.py  test_withdraw.py  test_wizard.py
(+110 files in other folders)
