[build-system]
requires = ["setuptools>=71", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iconfucius"
version = "0.9.0rc1"
description = "IConfucius | Wisdom for Bitcoin Markets"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "onicai", email = "iconfucius@onicai.com" }]
maintainers = [{ name = "onicai", email = "iconfucius@onicai.com" }]
keywords = [
    "bitcoin",
    "icp",
    "internet-computer",
    "odin",
    "trading",
    "defi",
    "siwb",
    "ckbtc",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "typer>=0.21.1",
    "requests>=2.31",
    "curl_cffi>=0.7",
    "icp-py-core>=2.3.0",
    "filelock>=3.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.24.0",
    "build>=1.0",
    "twine>=5.0",
    "bitcoin-utils>=0.7.3",
    "coincurve>=20.0",
]

[project.urls]
Homepage = "https://github.com/onicai/IConfucius"
Repository = "https://github.com/onicai/IConfucius"
Documentation = "https://github.com/onicai/IConfucius#readme"
Issues = "https://github.com/onicai/IConfucius/issues"

[project.scripts]
iconfucius = "iconfucius.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["iconfucius*"]
exclude = ["canisters*"]

[tool.setuptools.package-data]
iconfucius = ["py.typed", "*.toml", "personas/**/*.toml", "personas/**/*.md", "client/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
